rke-bicep/app/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversao-temperatura
spec:
  replicas: 3
  selector:
    matchLabels:
      app: conversao-temperatura
  template:
    metadata:
      labels:
        app: conversao-temperatura
    spec:
      containers:
      - name: conversao-temperatura
        image: fabricioveronez/conversao-temperatura:v1
        ports:
        - containerPort: 8080
