rke-bicep/app/service.yml
kind: Service
apiVersion: v1
metadata:
  name: conversao-temperatura-service
spec:
  selector:
    app: conversao-temperatura
  ports:
    - port: 8080 # Default port for image
