rke-bicep/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conversao-temperatura-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: conversao-temperatura-service
              port: 
                number: 8080
